--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,9 @@
     transform: translateY(0px);
   }
 }
+
+.box {
+  border-top: 1px ridge rgb(0, 0, 0);
+  /* border-bottom: 1px ridge rgb(0, 0, 0); */
+  padding-top: 5px;
+}
