--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@
 }
 
 .card {
-  border: 15px !important;
+  border: 1px !important;
   border-color: black !important;
 }
 
@@ -65,6 +65,14 @@
 
 .card-header {
   background-color: #DBC6A9 !important;
+}
+
+.rosy-brown-bg {
+  background-color: #C69595 !important;
+}
+
+.light-grey-bg {
+  background-color: #DBD1D2 !important;
 }
 
 @keyframes spinner {
