Changed colour in profile tab for better differentiation of buttons

--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,9 @@
 .white-text {
   color: white !important;
 }
+
+.header-button {
+  background-color: #eef36a !important;
+  border: none !important;
+  color: black !important;
+}
